934, 969, 978: Correct section spacing for all pages. (#970)
* 969: Correct section spacing for all pages.

* Extracted section styles to article.css and hub.css, to avoid interfering with design system styles.

* 969: Standardise top padding of section just below hero.

--- a/aemedge/styles/styles.css
+++ b/aemedge/styles/styles.css
@@ -118,6 +118,7 @@ body {
   --nav-secondary-height-large-screens: 60px;
   --nav-secondary-height: var(--nav-secondary-height-small-screens);
   --nav-height: var(--nav-primary-height);
+  --section-spacing-vertical: var(--udexSpacer40);
 
   font-family: var(--sapFontFamily);
   font-size: var(--udexTypographyBodySFontSize);
@@ -139,6 +140,11 @@ body {
 
   @media (width >= 980px) {
     --nav-secondary-height: var(--nav-secondary-height-large-screens);
+    --section-spacing-vertical: var(--udexSpacer48);
+  }
+
+  @media (width >= 1280px) {
+    --section-spacing-vertical: var(--udexSpacer56);
   }
 }
 
@@ -470,15 +476,17 @@ main img {
   left: 0;
 }
 
-main .section {
-  &.divider-top::before {
-    content: '';
-    box-shadow:
-      0 -2px 0 var(--udexColorNeutralWhite),
-      0 -3px 0 var(--udexCoreDividerLight),
-      0 -5px 0 var(--udexColorNeutralWhite);
-    display: block;
-    height: 5px;
+.section {
+  &.divider-top {
+    padding-block-start: 0;
+
+    &::before {
+      content: '';
+      background-color: var(--udexCoreDividerLight);
+      display: block;
+      height: 1px;
+      margin-block: 2px calc(2px + var(--section-spacing-vertical));
+    }
   }
 
   &.text-large {
@@ -608,8 +616,8 @@ main .section {
 
 /* Embedded sections within blocks */
 .fragment-container .section {
-  padding-left: 0;
-  padding-right: 0;
+  padding-inline: 0;
+  padding-block-end: 0;
 }
 
 .fragment-container .section:first-of-type {
