--- a/aemedge/templates/article/article.css
+++ b/aemedge/templates/article/article.css
@@ -1,3 +1,23 @@
+main .section {
+  padding-block: var(--section-spacing-vertical);
+
+  &:first-child {
+    padding-block-start: 0;
+  }
+}
+
+main > .section:not(.fragment-container) {
+  & > :first-child {
+    margin-block-start: 0;
+  }
+
+  & > .default-content-wrapper:first-child {
+    & :first-child {
+      margin-block-start: 0;
+    }
+  }
+}
+
 /* Article paragraph spacing */
 .article p {
   margin-top: 18px; /* no design, assumption */
@@ -16,6 +36,22 @@ main {
   grid-auto-flow: row;
   grid-template-columns: repeat(12, minmax(0, 1fr));
   margin-inline: var(--udexGridMargins);
+
+  & > :first-child {
+    padding-block-start: 0;
+  }
+
+  & > :last-child {
+    padding-block-end: var(--udexSpacer56);
+
+    @media (width >= 980px){
+      padding-block-end: var(--udexSpacer64);
+    }
+
+    @media (width >= 1280px){
+      padding-block-end: var(--udexSpacer84);
+    }
+  }
 
   & > * {
     grid-column: 1 / -1;
@@ -64,7 +100,7 @@ main {
     > .hero-container + .section,
     > .toc-container + .section,
     > .hero-container ~ [data-location='sidebar'] {
-      padding-block-start: var(--udexSpacer84);
+      padding-block-start: var(--udexSpacer64);
     }
 
     &
@@ -77,12 +113,10 @@ main {
           )
       ) {
       grid-column: 1 / 9;
-      padding-block-end: 56px;
     }
 
     & > [data-location='document-footer'] {
       grid-column: 1 / -1;
-      padding-block-end: 84px;
     }
 
     &:has(.toc-container) {
@@ -110,6 +144,14 @@ main {
       grid-row: 2 / -2;
       margin-block-end: var(--udexSpacer56);
       position: static;
+    }
+  }
+
+  @media (width >= 1280px) {
+    > .hero-container + .section,
+    > .toc-container + .section,
+    > .hero-container ~ [data-location='sidebar'] {
+      padding-block-start: var(--udexSpacer84);
     }
   }
 
